--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -27,6 +27,9 @@ jobs:
           python-version: '3.10' # The python version to use.
           cache: 'pip'
           cache-dependency-path: 'telegram-script/requirements.txt'
+        
+      - name: Install dependencies
+        run: pip install -r telegram-script/requirements.txt
 
       - name: Run telegram notification script
         run: python3 telegram-script
