--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -30,16 +30,19 @@ jobs:
         
       - name: Install dependencies
         run: pip install -r telegram-script/requirements.txt
+        
+      - name: Setup git
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git checkout -b update
 
       - name: Run telegram notification script
         run: python3 telegram-script
 
       - name: Commit changes
         run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
           git add .
-          git checkout -b update
           git commit -m "Update release notification $(date -u)"
           git push origin update
           
