--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -36,6 +36,7 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git checkout -b update
+          git fetch && git pull
 
       - name: Run telegram notification script
         run: python3 telegram-script
