--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -36,6 +36,7 @@ jobs:
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git checkout -b update
+          git config pull.rebase false
           git fetch && git pull origin update
 
       - name: Run telegram notification script
