--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Install dependencies
         run: pip install -r telegram-script/requirements.txt
 
+      - name: Delete previous release notification file
+        run: rm -rf release_notification.md
+
       - name: Run telegram notification script
         run: python3 telegram-script
 
