Disable release notification temporarily

--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -30,19 +30,16 @@ jobs:
         
       - name: Install dependencies
         run: pip install -r telegram-script/requirements.txt
-
-      - name: Delete previous release notification file
-        run: rm -rf release_notification.md
-
+     
       - name: Run telegram notification script
         run: python3 telegram-script
 
-      - name: Commit release description changes
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Update telegram release message ${{ github.run_id }}
-          branch: update
-          file_pattern: '*.md'
+#     - name: Commit release description changes
+#        uses: stefanzweifel/git-auto-commit-action@v4
+#        with:
+#          commit_message: Update telegram release message ${{ github.run_id }}
+#          branch: update
+#          file_pattern: '*.md'
           
       - name: Telegram Channel Update
         uses: appleboy/telegram-action@master
