--- a/build.conf
+++ b/build.conf
@@ -6,8 +6,8 @@
 # some-other-patch patch2 patch3
 # "
 # DO NOT PUT MICROG PATCHES IN ANY OF THESE LISTS. IT IS HANDLED BY THE MODE CONFIGURATION BELOW
-YOUTUBE_EXCLUDED_PATCHES="always-autorepeat comments custom-video-speed debugging disable-fullscreen-panels disable-zoom-haptics enable-wide-searchbar hide-album-cards hide-artist-card hide-autoplay-button hide-captions-button hide-cast-button hide-create-button hide-crowdfunding-box hide-email-address hide-info-cards hide-my-mix hide-video-buttons hide-watch-in-vr premium-heading remove-player-button-background return-youtube-dislike"
-YOUTUBE_INCLUDED_PATCHES="theme"
+YOUTUBE_EXCLUDED_PATCHES="always-autorepeat comments custom-video-speed debugging disable-fullscreen-panels disable-zoom-haptics enable-wide-searchbar hide-album-cards hide-artist-card hide-autoplay-button hide-captions-button hide-cast-button hide-create-button hide-crowdfunding-box hide-email-address hide-info-cards hide-my-mix hide-video-buttons hide-watch-in-vr premium-heading remove-player-button-background return-youtube-dislike theme"
+YOUTUBE_INCLUDED_PATCHES=""
 MUSIC_EXCLUDED_PATCHES=""
 MUSIC_INCLUDED_PATCHES=""
 
