--- a/build.conf
+++ b/build.conf
@@ -22,10 +22,10 @@ MUSIC_ARM_V7A_MODE=both/latest
 TWITTER_MODE=apk/latest
 REDDIT_MODE=apk/latest
 TWITCH_MODE=apk/latest
-TIKTOK_MODE=apk/27.2.5
+TIKTOK_MODE=apk/latest
 
-SPOTIFY_MODE=none/latest
-TICKTICK_MODE=none/latest
+SPOTIFY_MODE=apk/latest
+TICKTICK_MODE=apk/latest
 WARN_WETTER_MODE=none/latest
 BACKDROPS_MODE=none/latest
 WINDY_MODE=none/latest
