--- a/build.conf
+++ b/build.conf
@@ -25,10 +25,10 @@ TWITCH_MODE=apk/latest
 TIKTOK_MODE=apk/latest
 
 SPOTIFY_MODE=apk/latest
-TICKTICK_MODE=apk/latest
-WARN_WETTER_MODE=none/latest
-BACKDROPS_MODE=none/latest
-WINDY_MODE=none/latest
+TICKTICK_MODE=none/latest
+WARN_WETTER_MODE=apk/latest
+BACKDROPS_MODE=apk/latest
+WINDY_MODE=apk/latest
 
 MOUNT_DELAY=5             # some low-end phones cannot mount apks on boot without a delay. increase to something like 20 if needed.
 COMPRESSION_LEVEL=9       # compression level for module zips. between 1 and 9
