--- a/config.toml
+++ b/config.toml
@@ -62,7 +62,7 @@ merge-integrations = true
 [TikTok]
 version = "27.2.5"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
-merge-integrations = true
+merge-integrations = false
 
 [Spotify]
 enabled = true
@@ -79,7 +79,7 @@ enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/backdrops/backdrops-wallpapers/"
 
 [WarnWetter]
-enabled = true
+enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/deutscher-wetterdienst/warnwetter/"
 
 [Windyapp]
