--- a/config.toml
+++ b/config.toml
@@ -72,6 +72,7 @@ uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 [Citra]
 enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/citra-emulator/citra-emulator/"
+arch = "arm64-v8a"
 
 [Backdrops]
 enabled = false
