--- a/config.toml
+++ b/config.toml
@@ -106,3 +106,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/appest-inc/ticktick-to-do-list-
 [Tasker]
 enabled = true
 apkmirror-dlurl = "https://www.apkmirror.com/apk/joaomgcd/tasker/"
+
+[Photomath]
+enabled = false
+apkmonk-dlurl = "https://www.apkmonk.com/app/com.microblink.photomath/"
