--- a/config.toml
+++ b/config.toml
@@ -69,8 +69,14 @@ build-mode = "apk"
 version = "auto"
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 
-[Citra]
+[Spotify-Lite]
 enabled = true
+build-mode = "apk"
+version = "auto"
+uptodown-dlurl = "https://spotify-lite.en.uptodown.com/android"
+
+[Citra]
+enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/citra-emulator/citra-emulator/"
 arch = "arm64-v8a"
 
@@ -115,6 +121,24 @@ enabled = true
 version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/instagram/instagram-instagram/"
 arch = "arm64-v8a"
+
+[Instagram-arm]
+enabled = true
+version = "auto"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/instagram/instagram-instagram/"
+arch = "armeabi-v7a"
+
+[Facebook-arm64]
+enabled = true
+version = "auto"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
+arch = "arm64-v8a"
+
+[Facebook-arm]
+enabled = true
+version = "auto"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/facebook/"
+arch = "armeabi-v7a"
 
 [InShorts-arm64]
 enabled = true
