--- a/config.toml
+++ b/config.toml
@@ -2,38 +2,40 @@ logging-to-file = true        # enables logging of every patch process to a sepe
 enable-magisk-update = true   # set this to false if you do not want to receive updates for the module in magisk app
 build-mindetach-module = true
 
-# add 'enabled = false' for not patching a specific app or remove its entry
+# add 'enabled = false' for not patching a specific app or remove it from the config
 # see https://github.com/j-hc/revanced-magisk-module/blob/main/CONFIG.md for more detailed explanations
 
 [YouTube]
-enabled = true
 build-mode = "both"                                                   # 'both', 'apk' or 'module'
-excluded-patches = ""                                                 # space-seperated patches to exclude (multiline strings are not supported)
+excluded-patches = "always-autorepeat comments custom-video-speed debugging disable-fullscreen-panels disable-zoom-haptics enable-wide-searchbar hide-album-cards hide-artist-card hide-autoplay-button hide-captions-button hide-cast-button hide-create-button hide-crowdfunding-box hide-email-address hide-info-cards hide-my-mix hide-video-buttons hide-watch-in-vr premium-heading remove-player-button-background return-youtube-dislike theme"                                                 # space-seperated patches to exclude (multiline strings are not supported)
 included-patches = ""                                                 # space-seperated patches to include (non-excluded patches are included by default)
 version = "auto"                                                      # 'auto', 'latest', 'beta' or a custom one like '17.40.41'
-exclusive-patches = false                                             # excludes all patches by default
+exclusive-patches = false                                             # excludes all patches by default and only applies included-patches
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 module-prop-name = "ytrv-magisk"
 
-[Music-arm64]
+[YouTube-Extended]
+app-name = "YouTube"
+patches-source = "inotia00/revanced-patches"
+integrations-source = "inotia00/revanced-integrations"
+rv-brand = "ReVanced Extended"
 build-mode = "both"
-app-name = "Music"
-excluded-patches = ""
-included-patches = ""
-version = "latest"
-apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
-module-prop-name = "ytmusicrv-magisk"
-arch = "arm64-v8a"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube/"
 
-[Music-arm]
+[Music]
 build-mode = "both"
-app-name = "Music"
 excluded-patches = ""
-included-patches = ""
-version = "latest"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
-module-prop-name = "ytmusicrv-arm-magisk"
-arch = "arm-v7a"
+arch = "both"
+
+[Music-Extended]
+app-name = "Music"
+patches-source = "inotia00/revanced-patches"
+integrations-source = "inotia00/revanced-integrations"
+rv-brand = "ReVanced Extended"
+build-mode = "both"
+apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music/"
+arch = "both"
 
 [Twitter]
 build-mode = "apk"
@@ -41,32 +43,23 @@ excluded-patches = "hide-views-stats"
 version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/twitter-inc/twitter/"
 
-[Reddit]
-build-mode = "apk"
-version = "auto"
-apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
-
 [Twitch]
 build-mode = "apk"
-version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/twitch-interactive-inc/twitch/"
 
 [TikTok]
-enabled = true
-version = "auto"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/tiktok-pte-ltd/tik-tok-including-musical-ly/"
 
-[Spotify]
-enabled = true
-build-mode = "apk"
-version = "auto"
-uptodown-dlurl = "https://spotify.en.uptodown.com/android"
+[Reddit]
+apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
 
-[Spotify-Lite]
-enabled = true
-build-mode = "apk"
-version = "auto"
-uptodown-dlurl = "https://spotify-lite.en.uptodown.com/android"
+[Messenger]
+apkmirror-dlurl = "https://www.apkmirror.com/apk/facebook-2/messenger/"
+arch = "arm64-v8a"
+
+[Spotify]
+enabled = false
+uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 
 [Citra]
 enabled = false
@@ -74,7 +67,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/citra-emulator/citra-emulator/"
 arch = "arm64-v8a"
 
 [Backdrops]
-enabled = true
+enabled = false
 uptodown-dlurl = "https://backdrops.en.uptodown.com/android"
 
 [WarnWetter]
@@ -85,59 +78,19 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/deutscher-wetterdienst/warnwett
 enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/windy-weather-world-inc/windy-wind-weather-forecast/"
 
-[MyExpenses]
-enabled = true
-uptodown-dlurl = "https://my-expenses.en.uptodown.com/android"
-
-[NyxMusicPlayer]
-enabled = true
-build-mode = "apk"
-version = "auto"
-uptodown-dlurl = "https://nyx-music-player.en.uptodown.com/android"
-
 [IconPackStudio]
-enabled = true
+enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/smart-launcher-team/icon-pack-studio/"
 
 [TickTick]
-enabled = true
+enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/appest-inc/ticktick-to-do-list-with-reminder-day-planner/"
 arch = "arm64-v8a"
 
 [Tasker]
-enabled = true
+enabled = false
 apkmirror-dlurl = "https://www.apkmirror.com/apk/joaomgcd/tasker/"
 
 [Photomath]
 enabled = false
 apkmonk-dlurl = "https://www.apkmonk.com/app/com.microblink.photomath/"
-
-[Instagram-arm64]
-enabled = true
-version = "auto"
-apkmirror-dlurl = "https://www.apkmirror.com/apk/instagram/instagram-instagram/"
-arch = "arm64-v8a"
-
-[Instagram-arm]
-enabled = true
-version = "auto"
-apkmirror-dlurl = "https://www.apkmirror.com/apk/instagram/instagram-instagram/"
-arch = "arm-v7a"
-
-[Facebook-arm64]
-enabled = true
-version = "auto"
-uptodown-dlurl = "https://facebook.en.uptodown.com/android"
-arch = "arm64-v8a"
-
-[Facebook-arm]
-enabled = true
-version = "auto"
-uptodown-dlurl = "https://facebook.en.uptodown.com/android"
-arch = "arm-v7a"
-
-[InShorts-arm64]
-enabled = true
-version = "auto"
-apkmirror-dlurl = "https://www.apkmirror.com/apk/inshorts-formerly-news-in-shorts/inshorts-news-in-60-words-2/"
-arch = "arm64-v8a"
