--- a/moj_final_v4.toml
+++ b/moj_final_v4.toml
@@ -3,4 +3,5 @@ enable-magisk-update = true   # set this to false if you do not want to receive 
 build-mindetach-module = true
 [YouTube]
 apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
+build-mode = "both"
 excluded-patches = "'Theme' 'Hide autoplay button' 'Premium heading' 'Return YouTube Dislike' 'Hide crowdfunding box' 'Hide layout components' 'Hide filter bar' 'Hide 'Load more' button' 'Hide seekbar' 'Hide timestamp' 'Enable debugging' 'Always autorepeat' 'GmsCore support'"
