--- a/moj_final_v4.toml
+++ b/moj_final_v4.toml
@@ -2,6 +2,7 @@ logging-to-file = true        # enables logging of every patch process to a sepe
 enable-magisk-update = true   # set this to false if you do not want to receive updates for the module in magisk app
 build-mindetach-module = true
 [YouTube]
-apkmirror-dlurl = "https://apkmirror.com/apk/google-inc/youtube/"
+version = "auto"
+archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.google.android.youtube"
 build-mode = "both"
 excluded-patches = "'Theme' 'Hide autoplay button' 'Premium heading' 'Return YouTube Dislike' 'Hide crowdfunding box' 'Hide layout components' 'Hide filter bar' 'Hide 'Load more' button' 'Hide seekbar' 'Hide timestamp' 'Enable debugging' 'Always autorepeat' 'GmsCore support'"
